quick fixes to scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ body, .btn {
   font-size: 1.6875rem;
   cursor: none;
 }
+body {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
 
 .btn {
   font-size: 1.6875rem;
